--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,23 @@
 .App {
   text-align: center;
+  position: relative;
+}
+
+.modal{
+  position: absolute;
+  background: white;
+  padding: 2rem;
+  height: auto;
+  left: 38%;
+  top: 10%;
+  z-index: 3;
+  border: 1px solid #0000000f;
+  box-shadow: 14px 0px 25px 0px #80808047;
+}
+.modal .close{
+  position: absolute;
+    top: 1%;
+    right: 1%;
 }
 
 .App-logo {
